<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.converter.ConverterActivity"
    tools:layout_editor_absoluteY="81dp"
    android:id="@+id/main_container_layout">

    <ImageView
        android:id="@+id/main_logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo"
        app:layout_constraintBottom_toTopOf="@+id/convert_currencies_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/convert_currencies_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/convert_currencies"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/base_currency_value_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo_image_view" />

    <Button
        android:id="@+id/base_currency_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/default_base_currency"
        app:layout_constraintBaseline_toBaselineOf="@+id/base_currency_value_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/base_currency_value_edit_text"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/base_currency_value_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/chosen_currency_value_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/base_currency_button"
        app:layout_constraintTop_toBottomOf="@+id/convert_currencies_text_view" />

    <Button
        android:id="@+id/chosen_currency_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/default_chosen_currency"
        app:layout_constraintBaseline_toBaselineOf="@+id/chosen_currency_value_text_view"
        app:layout_constraintEnd_toStartOf="@+id/chosen_currency_value_text_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chosen_currency_value_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/description_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chosen_currency_button"
        app:layout_constraintTop_toBottomOf="@+id/base_currency_value_edit_text" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/reverse_currencies_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chosen_currency_value_text_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/reverse_currencies_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/reverse_currencies"
        android:drawableStart="@drawable/reverse_currencies"
        android:text="@string/reverse_currencies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>